--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,11 @@
     <body>
         <div>Microblog:
             <a href="{{ url_for('index') }}">Home</a>
+            {% if current_user.is_anonymous %}
             <a href="{{ url_for('login') }}">Log in</a>
+            {% else %}
+            <a href="{{ url_for('logout') }}">Log out</a>
+            {% endif%}
         </div>
         <hr>
         {% with messages = get_flashed_messages() %}
