--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -14,6 +14,10 @@
                     {% endif %}
                     {% if user == current_user %}
                         <a href="{{ url_for('edit_profile', username=current_user.username) }}"> Edit Profile</a>
+                    {% elif not current_user.is_following(user) %}
+                        <p><a href="{{ url_for('follow', username=user.username) }}">Follow</a></p>
+                    {% else %}
+                        <p><a href="{{ url_for('unfollow', username=user.username) }}">Unfollow</a></p>
                     {% endif %}
                 </td>
             </tr>
