--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,30 @@
 
     {% block content %}
         <h1>Hello, {{ current_user.username }}!</h1>
+        {% if form %}
+        <form action="" method="POST">
+            {{ form.hidden_tag() }}
+            <p>
+                {{ form.post.label }}<br>
+                {{ form.post(cols=32, rows=4) }}
+                {% for error in form.post.errors %}
+                    <span style="color:red;">[{{ error }}]</span>
+                {% endfor %}
+            </p>
+            <p>{{ form.submit() }}</p>
+        </form>
+        {% endif %}
         {% for post in posts %}
-            <div><p>{{ post.author.username }} says: <b>{{ post.body }}</b></p></div>
+            {% include '_post.html' %}
         {% endfor %}
+        {% if prev_url %}
+        <p>
+            <a href="{{ prev_url }}">Prev</a>
+        </p>
+        {% endif %}
+        {% if next_url %}
+            <p>
+                <a href="{{ next_url }}">Next</a>
+            </p>
+        {% endif %}
     {% endblock %}
